--- a/whatsasena/Dockerfile
+++ b/whatsasena/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/LOST-BOY-000/luttapi /root/WhatsAsenaDuplicated
+RUN git clone https://github.com/althaf404/luttapi /root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
